--- a/websiteFinder.html
+++ b/websiteFinder.html
@@ -10,8 +10,24 @@
 
   <body class="bg-dark">
     <div>
-      <div class="container-sm">
+      <div class="container-fluid">
         <h1 class="text-center text-white ">Books!</h1>
+        <div class = "row">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xxl-2">
+            <div class = "card">
+              <img class = "card-img-top" src = "https://edit.org/images/cat/book-covers-big-2019101610.jpg" alt = "Card image">
+              <h4 class = "card-title">My Book Cover</h4>
+              <p class = "card-text">This is a cool book!</p>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xxl-2">
+            <div class = "card">
+              <img class = "card-img-top" src = "https://m.media-amazon.com/images/I/51PU+rBEnjL.jpg" alt = "Card image">
+              <h4 class = "card-title">Diary of a Wimpy Kid</h4>
+              <p class = "card-text">This is a cool book!</p>
+            </div>
+          </div>
+        <div>
 
       </div>
     </div>
