--- a/Books.html
+++ b/Books.html
@@ -15,8 +15,8 @@
         <div class = "row">
           <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xxl-2">
             <div class = "card">
-              <img class = "card-img-top" src = "https://edit.org/images/cat/book-covers-big-2019101610.jpg" alt = "Card image">
-              <h4 class = "card-title">My Book Cover</h4>
+              <img class = "card-img-top" src = "https://d28hgpri8am2if.cloudfront.net/book_images/onix/cvr9781416987321/belly-up-9781416987321_hr.jpg" alt = "Card image">
+              <h4 class = "card-title">Belly Up</h4>
               <p class = "card-text">This is a cool book!</p>
             </div>
           </div>
@@ -24,6 +24,34 @@
             <div class = "card">
               <img class = "card-img-top" src = "https://m.media-amazon.com/images/I/51PU+rBEnjL.jpg" alt = "Card image">
               <h4 class = "card-title">Diary of a Wimpy Kid</h4>
+              <p class = "card-text">This is a cool book!</p>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xxl-2">
+            <div class = "card">
+              <img class = "card-img-top" src = "https://m.media-amazon.com/images/I/414fBKKVniL._AC_SY780_.jpg" alt = "Card image">
+              <h4 class = "card-title">The Hunger Games</h4>
+              <p class = "card-text">This is a cool book!</p>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xxl-2">
+            <div class = "card">
+              <img class = "card-img-top" src = "https://images.ctfassets.net/usf1vwtuqyxm/35KbpLHvQvQtBBKs0vKErL/43985bc9e5bea863ccf9cc9561b62827/English_Harry_Potter_6_Epub_9781781100257.jpg?w=914&q=70&fm=jpg" alt = "Card image">
+              <h4 class = "card-title">Harry Potter</h4>
+              <p class = "card-text">This is a cool book!</p>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xxl-2">
+            <div class = "card">
+              <img class = "card-img-top" src = "http://prodimage.images-bn.com/pimages/9780062024053_p0_v2_s1200x630.jpg" alt = "Card image">
+              <h4 class = "card-title">Insurgence</h4>
+              <p class = "card-text">This is a cool book!</p>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xxl-2">
+            <div class = "card">
+              <img class = "card-img-top" src = "https://d28hgpri8am2if.cloudfront.net/book_images/onix/cvr9781442457546/spy-camp-9781442457546_hr.jpg" alt = "Card image">
+              <h4 class = "card-title">Spy Camp</h4>
               <p class = "card-text">This is a cool book!</p>
             </div>
           </div>
