--- a/Books.html
+++ b/Books.html
@@ -1,65 +1,175 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
   <head>
     <title>Books!</title>
-    <meta charset = "utf-8">
-    <meta name = "viewport" content = "width=device-width , initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width , initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-
   <body class="bg-dark">
     <div>
       <div class="container-fluid">
         <h1 class="text-center text-white ">Books!</h1>
-        <div class = "row">
-          <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xxl-2">
-            <div class = "card">
-              <img class = "card-img-top" src = "https://d28hgpri8am2if.cloudfront.net/book_images/onix/cvr9781416987321/belly-up-9781416987321_hr.jpg" alt = "Card image">
-              <h4 class = "card-title">Belly Up</h4>
-              <p class = "card-text">This is a cool book!</p>
+        <div class="row">
+          <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xxl-4">
+            <div class="card">
+              <img class="card-img-top" src="https://d28hgpri8am2if.cloudfront.net/book_images/onix/cvr9781416987321/belly-up-9781416987321_hr.jpg" alt="Card image">
+              <h4 class="card-title">Belly Up</h4>
+              <p class="card-text">
+                <a class="btn btn-primary" href="https://www.amazon.com/Belly-Up-FunJungle/dp/B08ZZXN1BS/ref=sr_1_1?crid=1SE10G4DO8RT&keywords=belly+up&qid=1666281828&qu=eyJxc2MiOiIyLjMzIiwicXNhIjoiMS42MyIsInFzcCI6IjEuNjAifQ%3D%3D&sprefix=belly+uo%2Caps%2C184&sr=8-1">Buy Book</a>
+                <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal1">Description</button>
+                <div class="modal" id="modal1">
+                  <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h4 class="modal-title">Description</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                      </div>
+                      <div class="modal-body">
+                        <p>Twelve-year-old Theodore “Teddy” Roosevelt Fitzroy has murder on his hands and trouble on his tail. He believes that Henry, the hippopotamus at the brand-new FunJungle, has been murdered. The zoo's top brass claim the hippo went belly up the natural way, but Teddy and his feisty friend Summer McCraken have other ideas.</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </p>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xxl-2">
-            <div class = "card">
-              <img class = "card-img-top" src = "https://m.media-amazon.com/images/I/51PU+rBEnjL.jpg" alt = "Card image">
-              <h4 class = "card-title">Diary of a Wimpy Kid</h4>
-              <p class = "card-text">This is a cool book!</p>
+          <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xxl-4">
+            <div class="card">
+              <img class="card-img-top" src="https://m.media-amazon.com/images/I/51PU+rBEnjL.jpg" alt="Card image">
+              <h4 class="card-title">Diary of a Wimpy Kid</h4>
+              <p class="card-text">
+                <a class="btn btn-primary" href="https://www.amazon.com/Diary-of-a-Wimpy-Kid/dp/B0051XV5Y6/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1666283045&sr=1-2">Buy Book</a>
+                <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal2">Description</button>
+                <div class="modal" id="modal2">
+                  <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h4 class="modal-title">Description</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                      </div>
+                      <div class="modal-body">
+                        <p>It's a new school year, and Greg Heffley finds himself thrust into middle school, where undersized weaklings share the hallways with kids who are taller, meaner, and already shaving. The hazards of growing up before you're ready are uniquely revealed through words and drawings as Greg records them in his diary.</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </p>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xxl-2">
-            <div class = "card">
-              <img class = "card-img-top" src = "https://m.media-amazon.com/images/I/414fBKKVniL._AC_SY780_.jpg" alt = "Card image">
-              <h4 class = "card-title">The Hunger Games</h4>
-              <p class = "card-text">This is a cool book!</p>
+          <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xxl-4">
+            <div class="card">
+              <img class="card-img-top" src="https://m.media-amazon.com/images/I/414fBKKVniL._AC_SY780_.jpg" alt="Card image">
+              <h4 class="card-title">The Hunger Games</h4>
+              <p class="card-text">
+                <a class="btn btn-primary" href="https://www.amazon.com/Hunger-Games-Book/dp/0439023483/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1666283151&sr=1-1">Buy Book</a>
+                <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal3">Description</button>
+                <div class="modal" id="modal3">
+                  <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h4 class="modal-title">Description</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                      </div>
+                      <div class="modal-body">
+                        <p>The Hunger Games is an annual event in which one boy and one girl aged 12–18 from each of the twelve districts surrounding the Capitol are selected by lottery to compete in a televised battle royale to the death.</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </p>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xxl-2">
-            <div class = "card">
-              <img class = "card-img-top" src = "https://images.ctfassets.net/usf1vwtuqyxm/35KbpLHvQvQtBBKs0vKErL/43985bc9e5bea863ccf9cc9561b62827/English_Harry_Potter_6_Epub_9781781100257.jpg?w=914&q=70&fm=jpg" alt = "Card image">
-              <h4 class = "card-title">Harry Potter</h4>
-              <p class = "card-text">This is a cool book!</p>
+          <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xxl-4">
+            <div class="card">
+              <img class="card-img-top" src="https://images.ctfassets.net/usf1vwtuqyxm/35KbpLHvQvQtBBKs0vKErL/43985bc9e5bea863ccf9cc9561b62827/English_Harry_Potter_6_Epub_9781781100257.jpg?w=914&q=70&fm=jpg" alt="Card image">
+              <h4 class="card-title">Harry Potter</h4>
+              <p class="card-text">
+                <a class="btn btn-primary" href="https://www.amazon.com/Harry-Potter-Half-Blood-Prince-Book/dp/0439784549/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1666283369&sr=1-1">Buy Book</a>
+                <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal4">Description</button>
+                <div class="modal" id="modal4">
+                  <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h4 class="modal-title">Description</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                      </div>
+                      <div class="modal-body">
+                        <p>Set during Harry Potter's sixth year at Hogwarts, the novel explores the past of the boy wizard's nemesis, Lord Voldemort, and Harry's preparations for the final battle against Voldemort alongside his headmaster and mentor Albus Dumbledore.</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </p>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xxl-2">
-            <div class = "card">
-              <img class = "card-img-top" src = "http://prodimage.images-bn.com/pimages/9780062024053_p0_v2_s1200x630.jpg" alt = "Card image">
-              <h4 class = "card-title">Insurgence</h4>
-              <p class = "card-text">This is a cool book!</p>
+          <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xxl-4">
+            <div class="card">
+              <img class="card-img-top" src="http://prodimage.images-bn.com/pimages/9780062024053_p0_v2_s1200x630.jpg" alt="Card image">
+              <h4 class="card-title">Insurgence</h4>
+              <p class="card-text">
+                <a class="btn btn-primary" href="https://www.amazon.com/Divergent-Insurgent-Veronica-Roth/dp/0062024043/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1666301206&sr=8-1">Buy Book</a>
+                <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal5">Description</button>
+                <div class="modal" id="modal5">
+                  <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h4 class="modal-title">Description</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                      </div>
+                      <div class="modal-body">
+                        <p>Telling the story of a dystopian world in which humanity is separated into five factions (Abnegation, Candour, Amity, Erudite, and Dauntless), it follows the experience of a girl named Beatrice who chooses to abandon her selfless Abnegation family in favour of the fearless and brave Dauntless.</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </p>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xxl-2">
-            <div class = "card">
-              <img class = "card-img-top" src = "https://d28hgpri8am2if.cloudfront.net/book_images/onix/cvr9781442457546/spy-camp-9781442457546_hr.jpg" alt = "Card image">
-              <h4 class = "card-title">Spy Camp</h4>
-              <p class = "card-text">This is a cool book!</p>
+          <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xxl-4">
+            <div class="card">
+              <img class="card-img-top" src="https://d28hgpri8am2if.cloudfront.net/book_images/onix/cvr9781442457546/spy-camp-9781442457546_hr.jpg" alt="Card image">
+              <h4 class="card-title">Spy Camp</h4>
+              <p class="card-text">
+                <a class="btn btn-primary" href="https://www.amazon.com/Spy-Camp-School-Stuart-Gibbs/dp/1442457546/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1666301309&sr=8-2">Buy Book</a>
+                <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal6">Description</button>
+                <div class="modal" id="modal6">
+                  <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h4 class="modal-title">Description</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                      </div>
+                      <div class="modal-body">
+                        <p>Ben and fellow students are shipped off to Spy Camp, a top-secret wilderness survival training facility. When SPYDER, an enemy spy organization resurfaces, Ben will have to put all his newfound skills to the test. Luckily, Ben has Erica Hale – his beautiful and talented fellow student – along for the adventure.</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </p>
             </div>
           </div>
-        <div>
-
+        </div>
       </div>
     </div>
   </body>
-
-
 </html>
