--- a/Books.html
+++ b/Books.html
@@ -1,3 +1,6 @@
+<!-- maybe add  diffent font-->
+<!-- you may want to add a nav bar and seperate your books into diffent categories-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,10 +10,41 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
+  <nav class="navbar p-1 navbar-expand-sm bg-success text-dark fixed-top">
+    <div class="container-fluid justify-content-center">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#home"><b>Home</b></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#theo"><b>Theodore</b></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#wimp"><b>Wimpy</b></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#home"><b>Home</b></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#theo"><b>Theodore</b></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#harry"><b>Harry Potter</b></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#ins"><b>Insurgence</b></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#spy"><b>Spy</b></a>
+        </li>
+
+      </ul>
+    </div>
+  </nav>
   <body class="bg-dark">
     <div>
       <div class="container-fluid">
-        <h1 class="text-center text-white ">Books!</h1>
+        <h1 id = "home" class="text-center text-white ">Books!</h1>
         <div class="row">
           <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xxl-4">
             <div class="card">
@@ -26,7 +60,7 @@
                         <h4 class="modal-title">Description</h4>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                       </div>
-                      <div class="modal-body">
+                      <div id = "theo" class="modal-body">
                         <p>Twelve-year-old Theodore “Teddy” Roosevelt Fitzroy has murder on his hands and trouble on his tail. He believes that Henry, the hippopotamus at the brand-new FunJungle, has been murdered. The zoo's top brass claim the hippo went belly up the natural way, but Teddy and his feisty friend Summer McCraken have other ideas.</p>
                       </div>
                       <div class="modal-footer">
@@ -39,7 +73,7 @@
             </div>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xxl-4">
-            <div class="card">
+            <div id = "wimp" class="card">
               <img class="card-img-top" src="https://m.media-amazon.com/images/I/51PU+rBEnjL.jpg" alt="Card image">
               <h4 class="card-title">Diary of a Wimpy Kid</h4>
               <p class="card-text">
@@ -65,7 +99,7 @@
             </div>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xxl-4">
-            <div class="card">
+            <div id = "hunger" class="card">
               <img class="card-img-top" src="https://m.media-amazon.com/images/I/414fBKKVniL._AC_SY780_.jpg" alt="Card image">
               <h4 class="card-title">The Hunger Games</h4>
               <p class="card-text">
@@ -91,7 +125,7 @@
             </div>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xxl-4">
-            <div class="card">
+            <div id = "harry" class="card">
               <img class="card-img-top" src="https://images.ctfassets.net/usf1vwtuqyxm/35KbpLHvQvQtBBKs0vKErL/43985bc9e5bea863ccf9cc9561b62827/English_Harry_Potter_6_Epub_9781781100257.jpg?w=914&q=70&fm=jpg" alt="Card image">
               <h4 class="card-title">Harry Potter</h4>
               <p class="card-text">
@@ -117,7 +151,7 @@
             </div>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xxl-4">
-            <div class="card">
+            <div id = "ins" class="card">
               <img class="card-img-top" src="http://prodimage.images-bn.com/pimages/9780062024053_p0_v2_s1200x630.jpg" alt="Card image">
               <h4 class="card-title">Insurgence</h4>
               <p class="card-text">
@@ -143,7 +177,7 @@
             </div>
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xxl-4">
-            <div class="card">
+            <div id = "spy" class="card">
               <img class="card-img-top" src="https://d28hgpri8am2if.cloudfront.net/book_images/onix/cvr9781442457546/spy-camp-9781442457546_hr.jpg" alt="Card image">
               <h4 class="card-title">Spy Camp</h4>
               <p class="card-text">
